WIP classification guide with keras cv

--- a/guides/ipynb/keras_cv/classification_with_keras_cv.ipynb
+++ b/guides/ipynb/keras_cv/classification_with_keras_cv.ipynb
@@ -50,15 +50,17 @@
     "\n",
     "import json\n",
     "import math\n",
+    "\n",
+    "import numpy as np\n",
+    "import keras\n",
     "import keras_cv\n",
+    "from keras import ops\n",
+    "from keras import losses\n",
+    "from keras import optimizers\n",
+    "from keras.optimizers import schedules\n",
+    "from keras import metrics\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "import keras\n",
-    "from keras import losses\n",
-    "import numpy as np\n",
-    "from keras import optimizers\n",
-    "from tensorflow.keras.optimizers import schedules\n",
-    "from keras import metrics\n",
     ""
    ]
   },
@@ -126,11 +128,11 @@
    },
    "outputs": [],
    "source": [
-    "filepath = tf.keras.utils.get_file(origin=\"https://i.imgur.com/9i63gLN.jpg\")\n",
+    "filepath = keras.utils.get_file(origin=\"https://i.imgur.com/9i63gLN.jpg\")\n",
     "image = keras.utils.load_img(filepath)\n",
     "image = np.array(image)\n",
     "keras_cv.visualization.plot_image_gallery(\n",
-    "    [image], rows=1, cols=1, value_range=(0, 255), show=True, scale=4\n",
+    "    image[None, ...], rows=1, cols=1, value_range=(0, 255), show=True, scale=4\n",
     ")"
    ]
   },
@@ -172,8 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "top_classes = predictions[0].argsort(axis=-1)\n",
-    ""
+    "top_classes = predictions[0].argsort(axis=-1)"
    ]
   },
   {
@@ -275,12 +276,12 @@
     "resizing = keras_cv.layers.Resizing(\n",
     "    IMAGE_SIZE[0], IMAGE_SIZE[1], crop_to_aspect_ratio=True\n",
     ")\n",
+    "encoder = keras.layers.CategoryEncoding(num_classes, \"one_hot\", dtype=\"int32\")\n",
     "\n",
     "\n",
     "def preprocess_inputs(image, label):\n",
-    "    image = tf.cast(image, tf.float32)\n",
     "    # Staticly resize images as we only iterate the dataset once.\n",
-    "    return resizing(image), tf.one_hot(label, num_classes)\n",
+    "    return resizing(image), encoder(label)\n",
     "\n",
     "\n",
     "# Shuffle the dataset to increase diversity of batches.\n",
@@ -672,17 +673,17 @@
     "colab_type": "text"
    },
    "source": [
-    "While this tackles the problem reasonably well, it can cause the classifier to\n",
-    "develop responses to borders between features and black pixel areas caused by\n",
-    "the cutout.\n",
+    "While this tackles the problem reasonably well, it can cause the classifier\n",
+    "to develop responses to borders between features and black pixel areas caused\n",
+    "by the cutout.\n",
     "\n",
     "[`CutMix`](https://arxiv.org/abs/1905.04899) solves the same issue by using\n",
     "a more complex (and more effective) technique.\n",
     "Instead of replacing the cut-out areas with black pixels, `CutMix` replaces\n",
     "these regions with regions of other images sampled from within your training\n",
     "set!\n",
-    "Following this replacement, the image's classification label is updated to be a\n",
-    "blend of the original and mixed image's class label.\n",
+    "Following this replacement, the image's classification label is updated to be\n",
+    "a blend of the original and mixed image's class label.\n",
     "\n",
     "What does this look like in practice?  Let's check it out:"
    ]
@@ -697,7 +698,7 @@
    "source": [
     "cut_mix = keras_cv.layers.CutMix()\n",
     "# CutMix needs to modify both images and labels\n",
-    "inputs = {\"images\": image_batch, \"labels\": label_batch}\n",
+    "inputs = {\"images\": image_batch, \"labels\": tf.cast(label_batch, \"float32\")}\n",
     "\n",
     "keras_cv.visualization.plot_image_gallery(\n",
     "    cut_mix(inputs)[\"images\"],\n",
@@ -724,8 +725,8 @@
     "a little alchemy never hurt anyone!\n",
     "\n",
     "`MixUp()` works by sampling two images from a batch, then proceeding to\n",
-    "literally blend together their pixel intensities as well as their classification\n",
-    "labels.\n",
+    "literally blend together their pixel intensities as well as their\n",
+    "classification labels.\n",
     "\n",
     "Let's see it in action:"
    ]
@@ -740,7 +741,7 @@
    "source": [
     "mix_up = keras_cv.layers.MixUp()\n",
     "# MixUp needs to modify both images and labels\n",
-    "inputs = {\"images\": image_batch, \"labels\": label_batch}\n",
+    "inputs = {\"images\": image_batch, \"labels\": tf.cast(label_batch, \"float32\")}\n",
     "\n",
     "keras_cv.visualization.plot_image_gallery(\n",
     "    mix_up(inputs)[\"images\"],\n",
@@ -793,7 +794,7 @@
    },
    "outputs": [],
    "source": [
-    "augmenter = keras.Sequential(augmenters)\n",
+    "augmenter = keras_cv.layers.Augmenter(augmenters)\n",
     "train_ds = train_ds.map(augmenter, num_parallel_calls=tf.data.AUTOTUNE)\n",
     "\n",
     "image_batch = next(iter(train_ds.take(1)))[\"images\"]\n",
@@ -913,23 +914,26 @@
     "        * target_lr\n",
     "        * (\n",
     "            1\n",
-    "            + tf.cos(\n",
-    "                tf.constant(math.pi)\n",
-    "                * tf.cast(global_step - warmup_steps - hold, tf.float32)\n",
-    "                / float(total_steps - warmup_steps - hold)\n",
+    "            + ops.cos(\n",
+    "                math.pi\n",
+    "                * ops.convert_to_tensor(\n",
+    "                    global_step - warmup_steps - hold, dtype=\"float32\"\n",
+    "                )\n",
+    "                / ops.convert_to_tensor(\n",
+    "                    total_steps - warmup_steps - hold, dtype=\"float32\"\n",
+    "                )\n",
     "            )\n",
     "        )\n",
     "    )\n",
     "\n",
-    "    warmup_lr = tf.cast(target_lr * (global_step / warmup_steps), tf.float32)\n",
-    "    target_lr = tf.cast(target_lr, tf.float32)\n",
+    "    warmup_lr = target_lr * (global_step / warmup_steps)\n",
     "\n",
     "    if hold > 0:\n",
-    "        learning_rate = tf.where(\n",
+    "        learning_rate = ops.where(\n",
     "            global_step > warmup_steps + hold, learning_rate, target_lr\n",
     "        )\n",
     "\n",
-    "    learning_rate = tf.where(global_step < warmup_steps, warmup_lr, learning_rate)\n",
+    "    learning_rate = ops.where(global_step < warmup_steps, warmup_lr, learning_rate)\n",
     "    return learning_rate\n",
     "\n",
     "\n",
@@ -952,7 +956,7 @@
     "            hold=self.hold,\n",
     "        )\n",
     "\n",
-    "        return tf.where(step > self.total_steps, 0.0, lr, name=\"learning_rate\")\n",
+    "        return ops.where(step > self.total_steps, 0.0, lr)\n",
     ""
    ]
   },
@@ -989,7 +993,7 @@
     "    hold=hold_steps,\n",
     ")\n",
     "optimizer = optimizers.SGD(\n",
-    "    decay=5e-4,\n",
+    "    weight_decay=5e-4,\n",
     "    learning_rate=schedule,\n",
     "    momentum=0.9,\n",
     ")"
@@ -1015,7 +1019,7 @@
    },
    "outputs": [],
    "source": [
-    "backbone = keras_cv.models.EfficientNetV2B1Backbone()\n",
+    "backbone = keras_cv.models.ResNet18V2Backbone()\n",
     "model = keras.Sequential(\n",
     "    [\n",
     "        backbone,\n",
